# solana-token-account-burn-close

./: .env.example  .gitignore  Cargo.toml  README.md  burnAndCloseTokens.ts  env.example  package-lock.json  package.json  tsconfig.json
src/: main.rs
