[package]
name = "solana-token-burn-close"
version = "0.1.0"
edition = "2021"
description = "A Rust tool for burning and closing unnecessary token accounts on Solana to recover SOL"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
solana-client = "2.0"
solana-sdk = "2.0"
spl-token = "5.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base58 = "0.2"
bs58 = "0.5"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
